Fix also img overflow on mobile devices

--- a/evolveum-jekyll-theme/_sass/evolveum/_base.scss
+++ b/evolveum-jekyll-theme/_sass/evolveum/_base.scss
@@ -233,6 +233,11 @@ div.page-meta {
     margin-bottom: 2rem;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 table {
     max-width: 100%;
     overflow-x: auto;
